--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "@types/micromatch": "^4.0.6",
     "@types/node": "^20.10.4",
     "@types/picomatch": "^2.3.3",
-    "@types/semver": "^7.5.6",
     "@types/sass": "~1.43.1",
+    "@types/semver": "^7.5.6",
     "@types/stylus": "^0.48.42",
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
@@ -74,6 +74,7 @@
     "execa": "^8.0.1",
     "feed": "^4.2.2",
     "fs-extra": "^11.2.0",
+    "gsap": "^3.12.4",
     "lint-staged": "^15.2.0",
     "npm-run-all2": "^6.1.1",
     "picocolors": "^1.0.0",
